# practical-rust

./: Cargo.toml  README.md
src/: error.rs  kv.rs
